[package]
name = "axum_todo"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.5.0", features = ["trace"] }
axum = { version = "0.7.5", features = ["full"] }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
